disable preview features, drop unnecessary workaround (fixed in netty)